Bug 106690 - [CI] igt@syncobj_wait@reset-during-wait-for-submit - fail - Test assertion failure function syncobj_wait, file ../lib/igt_syncobj.c:229 - Last errno: 62, Timer expired
Summary: [CI] igt@syncobj_wait@reset-during-wait-for-submit - fail - Test assertion fa...
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: XOrg git
Hardware: Other All
: medium normal
Assignee: Intel GFX Bugs mailing list
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard: ReadyForDev
Keywords:
Depends on:
Blocks:
 
Reported: 2018-05-28 14:26 UTC by Martin Peres
Modified: 2018-10-16 08:29 UTC (History)
1 user (show)

See Also:
i915 platform: CFL
i915 features: GEM/Other


Attachments

Description Martin Peres 2018-05-28 14:26:29 UTC
https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_39/fi-cfl-u/igt@syncobj_wait@reset-during-wait-for-submit.html

(syncobj_wait:1547) igt_syncobj-CRITICAL: Test assertion failure function syncobj_wait, file ../lib/igt_syncobj.c:229:
(syncobj_wait:1547) igt_syncobj-CRITICAL: Failed assertion: ret == 0
(syncobj_wait:1547) igt_syncobj-CRITICAL: Last errno: 62, Timer expired
(syncobj_wait:1547) igt_syncobj-CRITICAL: error: -62 != 0
Subtest reset-during-wait-for-submit failed.
Comment 1 Chris Wilson 2018-09-21 09:42:29 UTC
commit 12fec62aea6ea67512f0ddabf960c9270b6d1b05
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Thu Sep 20 21:05:30 2018 +0100

    drm: Fix syncobj handing of schedule() returning 0
    
    After schedule() returns 0, we must do one last check of COND to
    determine the reason for the wakeup with 0 jiffies remaining before
    reporting the timeout -- otherwise we may lose the signal due to
    scheduler delays.
    
    References: https://bugs.freedesktop.org/show_bug.cgi?id=106690
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>
    Reviewed-by: Tvrtko Ursulin <tvrtko.ursulin@intel.com>
    Link: https://patchwork.freedesktop.org/patch/msgid/20180920200530.2836-2-chris@chris-wilson.co.uk
    Reviewed-by: Daniel Vetter <daniel.vetter@ffwll.ch>

should fix it, one hopes.
Comment 2 Lakshmi 2018-10-16 08:29:47 UTC
I assume this is fixed. Last seen this issue 5 months ago (drm_tip_39). Closing the bug.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.